# HarmonIt

./: .gitignore  Dockerfile.cpu  Dockerfile.gpu  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: ABIDE_DOWNLOAD_REPORT.md  abide_manifest.csv  splits.json
documentation/: CONTAINERS.md  ENV_SETUP.md  INSTALLATION.md  METRICS.md  PREPROCESSING.md
outputs/harmonized/neurocombat/test/: config.json
outputs/harmonized/neurocombat/test/metrics/: summary_metrics.json
scripts/: bulk_download_abide_custom.py  check_env.py  data_sanity_check.py  eval_harmonized_npz.py  eval_site_probe.py  find_total_numbers.py  make_abide_manifest.py  make_splits.py  qc_dataloader.py  qc_head_mask.py  sanity1_visual_qc.py  train_site_probe.py  train_site_probe_harmonized.py
scripts/methods/: neurocombat.py
scripts/methods/NeuroCombat/: neurocombat.py
scripts/tests/: test_classification.py  test_distribution.py  test_evaluator.py  test_feature_similarity.py  test_metrics.py  test_psnr.py  test_site_leakage.py  test_ssim.py
shell_scripts/: run_cpu.sh  run_gpu.sh
src/data/: abide_slices_dataset.py
src/harmonit/data/: abide_slices_dataset.py
src/harmonit/metrics/: __init__.py  classification.py  distribution_alignment.py  evaluator.py  feature_consistency.py  site_leakage.py  structural_preservation.py
src/harmonit/utils/: metrics.py  plotting.py  system.py
